--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body{
     background-image: radial-gradient(hsl(214, 47%, 23%),hsl(237, 49%, 15%));
     background-repeat: no-repeat;
     background-size: cover;
-    width: 1366px;
+    /* width: 1366px; */
     height: 1000px;
     overflow: hidden; /* Hide scrollbars */
 }
